1999-06-28  Thomas Bushnell, BSG  <tb@mit.edu>

	* dir-rmdir.c (diskfs_S_dir_rmdir): Reorganized to make clearer.

1999-06-27  Thomas Bushnell, BSG  <tb@mit.edu>

	* sync-default.c (diskfs_default_sync_interval): Reduce to five
	seconds.  Hardware is much different than when Unix originally
	picked thirty, plus we manage VM differently than the Unix buffer
	cache did, and tend to delay many more writes than Unix did.

1999-06-13  Roland McGrath  <roland@baalperazim.frob.com>

	* file-get-trans.c (diskfs_S_file_get_translator): Fix type cast in
	last change.

	* file-get-trans.c (diskfs_S_file_get_translator): If we return an
	error, vm_deallocate any vm_allocated memory.
	From Mark Kettenis <kettenis@gnu.org>.

1999-06-02  Roland McGrath  <roland@baalperazim.frob.com>

	* boot-start.c (diskfs_start_bootstrap): Pass environment collected
	from `environ' on to init.  The kernel can send more parameters
	through this way without us knowing about them specifically.

1999-05-19  Roland McGrath  <roland@baalperazim.frob.com>

	* console.c (diskfs_console_stdio): If there is an fd 2 that appears
	to work, just leave it as is and dup2 it to fd 1 as well.

1999-05-16  Roland McGrath  <roland@baalperazim.frob.com>

	* file-chown.c (diskfs_S_file_chown): Fix last change: not just
	permission check, actually don't make the change if value is -1.

1999-05-13  Roland McGrath  <roland@baalperazim.frob.com>

	* file-chown.c (diskfs_S_file_chown): Either arg being -1 means don't
	change that id.

Tue Apr  6 10:05:49 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* dir-renamed.c (diskfs_rename_dir): Stage 1, if TNP == FNP, we
	have to unlock TNP with diskfs_nput and not just diskfs_nrele it.

Tue Mar 16 17:20:06 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* lookup.c (diskfs_lookup): Reformat for prettiness.

1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>

	* io-revoke.c (diskfs_S_io_revoke): Use ports_class_iterate.
	* readonly.c (diskfs_set_readonly): Likewise.
