@@ -1,6 +1,14 @@
+1999-06-29  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* lookup.c (diskfs_lookup): If we get an error from
+	fshelp_checkdirmod, clear *NP as well as returning the error.
+	Use diskfs_nrele instead of diskfs_nput in case *NP and DP are
+	the same.
+
 1999-06-28  Thomas Bushnell, BSG  <tb@mit.edu>
 
-	* dir-rmdir.c (diskfs_S_dir_rmdir): Reorganized to make clearer.
+	* dir-rmdir.c (diskfs_S_dir_rmdir): Reorganized to make clearer;
+	several little buglets fixed too.
 
 1999-06-27  Thomas Bushnell, BSG  <tb@mit.edu>
 
